# flask-wtf-playground

./: pyproject.toml
app/: __init__.py
app/templates/: submit.html  upload.html
app/templates/base/: _render_field.html
app/templates/field/: basic.html  string.html
app/templates/validator/: any_of.html  custom.html  data_required.html  email.html  equal_to.html  ip_address.html  mac_address.html  none_of.html  number_range.html  option.html  regexp.html  url.html  uuid.html
app/views/: __init__.py  field_view.py  index.py  validator_view.py
